y.output
State 107 conflicts: 1 shift/reduce


Grammar

    0 $accept: Programa $end

    1 Programa: CABECERA_PROGRAMA bloque

    2 bloque: Inicio_de_bloque Declar_de_variables_locales Declar_de_subprogs Sentencias Fin_de_bloque

    3 Declar_de_subprogs: Declar_de_subprogs Declar_subprog
    4                   | /* empty */

    5 Declar_subprog: Cabecera_subprograma bloque

    6 Declar_de_variables_locales: MARCA_INI_DECLAR_VARIABLES Variables_locales MARCA_FIN_DECLAR_VARIABLES
    7                            | /* empty */

    8 Cabecera_subprograma: SUBPROG_CLAVE IDENTIFICADOR PARIZQ lista_argumentos PARDER

    9 Inicio_de_bloque: LLAVIZQ

   10 Fin_de_bloque: LLAVDER

   11 Variables_locales: Variables_locales Cuerpo_declar_variables
   12                  | /* empty */

   13 lista_argumentos: lista_argumentos COMA tipo IDENTIFICADOR
   14                 | tipo IDENTIFICADOR
   15                 | /* empty */

   16 lista_identificadores: lista_identificadores COMA IDENTIFICADOR
   17                      | IDENTIFICADOR
   18                      | lista_identificadores IDENTIFICADOR error

   19 lista_expresiones: lista_expresiones COMA expresion
   20                  | expresion
   21                  | /* empty */

   22 Cuerpo_declar_variables: tipo lista_identificadores PYC
   23                        | lista_identificadores PYC error
   24                        | tipo lista_identificadores error

   25 tipo: TIPO_PRIM
   26     | TIPO_LISTA TIPO_PRIM

   27 Sentencias: Sentencia Sentencias
   28           | /* empty */

   29 Sentencia: bloque
   30          | sentencia_asignacion
   31          | sentencia_if
   32          | sentencia_while
   33          | sentencia_for
   34          | sentencia_entrada
   35          | sentencia_salida
   36          | llamada_proced
   37          | IDENTIFICADOR LISTA_SENT

   38 llamada_proced: IDENTIFICADOR PARIZQ lista_expresiones PARDER PYC

   39 sentencia_asignacion: IDENTIFICADOR ASIGN expresion PYC

   40 sentencia_if: NOMB_IF PARIZQ expresion PARDER NOMB_THEN

   41 Sentencia: NOMB_IF PARIZQ expresion PARDER NOMB_THEN Sentencia NOMB_ELSE Sentencia

   42 sentencia_while: NOMB_WHILE PARIZQ expresion PARDER Sentencia

   43 sentencia_for: NOMB_FOR PARIZQ sentencia_asignacion expresion PYC Sentencia PARDER Sentencia

   44 sentencia_entrada: NOMB_ENTRADA lista_identificadores PYC

   45 sentencia_salida: NOMB_SALIDA lista_expresiones_o_cadena PYC

   46 lista_expresiones_o_cadena: expresion COMA lista_expresiones_o_cadena
   47                           | CADENA COMA lista_expresiones_o_cadena
   48                           | expresion
   49                           | CADENA
   50                           | /* empty */

   51 expresion: PARIZQ expresion PARDER
   52          | OP_UNARIO expresion
   53          | expresion OP_BINARIO expresion
   54          | OP_UN_BIN expresion
   55          | expresion OP_UN_BIN expresion
   56          | expresion OP_TERN_PRIM_UN expresion OP_TERN_SEG expresion
   57          | IDENTIFICADOR
   58          | CONSTANTE
   59          | constante_lista
   60          | error

   61 constante_lista: CORIZQ lista_expresiones CORDER


Terminals, with rules where they appear

$end (0) 0
error (256) 18 23 24 60
SUBPROG_CLAVE (258) 8
CABECERA_PROGRAMA (259) 1
TIPO_PRIM (260) 25 26
TIPO_LISTA (261) 26
NOMB_IF (262) 40 41
NOMB_THEN (263) 40 41
NOMB_ELSE (264) 41
NOMB_WHILE (265) 42
NOMB_FOR (266) 43
NOMB_ENTRADA (267) 44
NOMB_SALIDA (268) 45
LISTA_SENT (269) 37
OP_TERN_PRIM_UN (270) 56
OP_TERN_SEG (271) 56
OP_UN_BIN (272) 54 55
OP_UNARIO (273) 52
OP_BINARIO (274) 53
IDENTIFICADOR (275) 8 13 14 16 17 18 37 38 39 57
CADENA (276) 47 49
CONSTANTE (277) 58
PARIZQ (278) 8 38 40 41 42 43 51
PARDER (279) 8 38 40 41 42 43 51
CORIZQ (280) 61
CORDER (281) 61
LLAVIZQ (282) 9
LLAVDER (283) 10
COMA (284) 13 16 19 46 47
PYC (285) 22 23 38 39 43 44 45
ASIGN (286) 39
MARCA_INI_DECLAR_VARIABLES (287) 6
MARCA_FIN_DECLAR_VARIABLES (288) 6


Nonterminals, with rules where they appear

$accept (34)
    on left: 0
Programa (35)
    on left: 1, on right: 0
bloque (36)
    on left: 2, on right: 1 5 29
Declar_de_subprogs (37)
    on left: 3 4, on right: 2 3
Declar_subprog (38)
    on left: 5, on right: 3
Declar_de_variables_locales (39)
    on left: 6 7, on right: 2
Cabecera_subprograma (40)
    on left: 8, on right: 5
Inicio_de_bloque (41)
    on left: 9, on right: 2
Fin_de_bloque (42)
    on left: 10, on right: 2
Variables_locales (43)
    on left: 11 12, on right: 6 11
lista_argumentos (44)
    on left: 13 14 15, on right: 8 13
lista_identificadores (45)
    on left: 16 17 18, on right: 16 18 22 23 24 44
lista_expresiones (46)
    on left: 19 20 21, on right: 19 38 61
Cuerpo_declar_variables (47)
    on left: 22 23 24, on right: 11
tipo (48)
    on left: 25 26, on right: 13 14 22 24
Sentencias (49)
    on left: 27 28, on right: 2 27
Sentencia (50)
    on left: 29 30 31 32 33 34 35 36 37 41, on right: 27 41 42 43
llamada_proced (51)
    on left: 38, on right: 36
sentencia_asignacion (52)
    on left: 39, on right: 30 43
sentencia_if (53)
    on left: 40, on right: 31
sentencia_while (54)
    on left: 42, on right: 32
sentencia_for (55)
    on left: 43, on right: 33
sentencia_entrada (56)
    on left: 44, on right: 34
sentencia_salida (57)
    on left: 45, on right: 35
lista_expresiones_o_cadena (58)
    on left: 46 47 48 49 50, on right: 45 46 47
expresion (59)
    on left: 51 52 53 54 55 56 57 58 59 60, on right: 19 20 39 40 41
    42 43 46 48 51 52 53 54 55 56
constante_lista (60)
    on left: 61, on right: 59


state 0

    0 $accept: . Programa $end

    CABECERA_PROGRAMA  shift, and go to state 1

    Programa  go to state 2


state 1

    1 Programa: CABECERA_PROGRAMA . bloque

    LLAVIZQ  shift, and go to state 3

    bloque            go to state 4
    Inicio_de_bloque  go to state 5


state 2

    0 $accept: Programa . $end

    $end  shift, and go to state 6


state 3

    9 Inicio_de_bloque: LLAVIZQ .

    $default  reduce using rule 9 (Inicio_de_bloque)


state 4

    1 Programa: CABECERA_PROGRAMA bloque .

    $default  reduce using rule 1 (Programa)


state 5

    2 bloque: Inicio_de_bloque . Declar_de_variables_locales Declar_de_subprogs Sentencias Fin_de_bloque

    MARCA_INI_DECLAR_VARIABLES  shift, and go to state 7

    $default  reduce using rule 7 (Declar_de_variables_locales)

    Declar_de_variables_locales  go to state 8


state 6

    0 $accept: Programa $end .

    $default  accept


state 7

    6 Declar_de_variables_locales: MARCA_INI_DECLAR_VARIABLES . Variables_locales MARCA_FIN_DECLAR_VARIABLES

    $default  reduce using rule 12 (Variables_locales)

    Variables_locales  go to state 9


state 8

    2 bloque: Inicio_de_bloque Declar_de_variables_locales . Declar_de_subprogs Sentencias Fin_de_bloque

    $default  reduce using rule 4 (Declar_de_subprogs)

    Declar_de_subprogs  go to state 10


state 9

    6 Declar_de_variables_locales: MARCA_INI_DECLAR_VARIABLES Variables_locales . MARCA_FIN_DECLAR_VARIABLES
   11 Variables_locales: Variables_locales . Cuerpo_declar_variables

    TIPO_PRIM                   shift, and go to state 11
    TIPO_LISTA                  shift, and go to state 12
    IDENTIFICADOR               shift, and go to state 13
    MARCA_FIN_DECLAR_VARIABLES  shift, and go to state 14

    lista_identificadores    go to state 15
    Cuerpo_declar_variables  go to state 16
    tipo                     go to state 17


state 10

    2 bloque: Inicio_de_bloque Declar_de_variables_locales Declar_de_subprogs . Sentencias Fin_de_bloque
    3 Declar_de_subprogs: Declar_de_subprogs . Declar_subprog

    SUBPROG_CLAVE  shift, and go to state 18
    NOMB_IF        shift, and go to state 19
    NOMB_WHILE     shift, and go to state 20
    NOMB_FOR       shift, and go to state 21
    NOMB_ENTRADA   shift, and go to state 22
    NOMB_SALIDA    shift, and go to state 23
    IDENTIFICADOR  shift, and go to state 24
    LLAVIZQ        shift, and go to state 3

    $default  reduce using rule 28 (Sentencias)

    bloque                go to state 25
    Declar_subprog        go to state 26
    Cabecera_subprograma  go to state 27
    Inicio_de_bloque      go to state 5
    Sentencias            go to state 28
    Sentencia             go to state 29
    llamada_proced        go to state 30
    sentencia_asignacion  go to state 31
    sentencia_if          go to state 32
    sentencia_while       go to state 33
    sentencia_for         go to state 34
    sentencia_entrada     go to state 35
    sentencia_salida      go to state 36


state 11

   25 tipo: TIPO_PRIM .

    $default  reduce using rule 25 (tipo)


state 12

   26 tipo: TIPO_LISTA . TIPO_PRIM

    TIPO_PRIM  shift, and go to state 37


state 13

   17 lista_identificadores: IDENTIFICADOR .

    $default  reduce using rule 17 (lista_identificadores)


state 14

    6 Declar_de_variables_locales: MARCA_INI_DECLAR_VARIABLES Variables_locales MARCA_FIN_DECLAR_VARIABLES .

    $default  reduce using rule 6 (Declar_de_variables_locales)


state 15

   16 lista_identificadores: lista_identificadores . COMA IDENTIFICADOR
   18                      | lista_identificadores . IDENTIFICADOR error
   23 Cuerpo_declar_variables: lista_identificadores . PYC error

    IDENTIFICADOR  shift, and go to state 38
    COMA           shift, and go to state 39
    PYC            shift, and go to state 40


state 16

   11 Variables_locales: Variables_locales Cuerpo_declar_variables .

    $default  reduce using rule 11 (Variables_locales)


state 17

   22 Cuerpo_declar_variables: tipo . lista_identificadores PYC
   24                        | tipo . lista_identificadores error

    IDENTIFICADOR  shift, and go to state 13

    lista_identificadores  go to state 41


state 18

    8 Cabecera_subprograma: SUBPROG_CLAVE . IDENTIFICADOR PARIZQ lista_argumentos PARDER

    IDENTIFICADOR  shift, and go to state 42


state 19

   40 sentencia_if: NOMB_IF . PARIZQ expresion PARDER NOMB_THEN
   41 Sentencia: NOMB_IF . PARIZQ expresion PARDER NOMB_THEN Sentencia NOMB_ELSE Sentencia

    PARIZQ  shift, and go to state 43


state 20

   42 sentencia_while: NOMB_WHILE . PARIZQ expresion PARDER Sentencia

    PARIZQ  shift, and go to state 44


state 21

   43 sentencia_for: NOMB_FOR . PARIZQ sentencia_asignacion expresion PYC Sentencia PARDER Sentencia

    PARIZQ  shift, and go to state 45


state 22

   44 sentencia_entrada: NOMB_ENTRADA . lista_identificadores PYC

    IDENTIFICADOR  shift, and go to state 13

    lista_identificadores  go to state 46


state 23

   45 sentencia_salida: NOMB_SALIDA . lista_expresiones_o_cadena PYC

    error          shift, and go to state 47
    OP_UN_BIN      shift, and go to state 48
    OP_UNARIO      shift, and go to state 49
    IDENTIFICADOR  shift, and go to state 50
    CADENA         shift, and go to state 51
    CONSTANTE      shift, and go to state 52
    PARIZQ         shift, and go to state 53
    CORIZQ         shift, and go to state 54

    PYC  reduce using rule 50 (lista_expresiones_o_cadena)

    lista_expresiones_o_cadena  go to state 55
    expresion                   go to state 56
    constante_lista             go to state 57


state 24

   37 Sentencia: IDENTIFICADOR . LISTA_SENT
   38 llamada_proced: IDENTIFICADOR . PARIZQ lista_expresiones PARDER PYC
   39 sentencia_asignacion: IDENTIFICADOR . ASIGN expresion PYC

    LISTA_SENT  shift, and go to state 58
    PARIZQ      shift, and go to state 59
    ASIGN       shift, and go to state 60


state 25

   29 Sentencia: bloque .

    $default  reduce using rule 29 (Sentencia)


state 26

    3 Declar_de_subprogs: Declar_de_subprogs Declar_subprog .

    $default  reduce using rule 3 (Declar_de_subprogs)


state 27

    5 Declar_subprog: Cabecera_subprograma . bloque

    LLAVIZQ  shift, and go to state 3

    bloque            go to state 61
    Inicio_de_bloque  go to state 5


state 28

    2 bloque: Inicio_de_bloque Declar_de_variables_locales Declar_de_subprogs Sentencias . Fin_de_bloque

    LLAVDER  shift, and go to state 62

    Fin_de_bloque  go to state 63


state 29

   27 Sentencias: Sentencia . Sentencias

    NOMB_IF        shift, and go to state 19
    NOMB_WHILE     shift, and go to state 20
    NOMB_FOR       shift, and go to state 21
    NOMB_ENTRADA   shift, and go to state 22
    NOMB_SALIDA    shift, and go to state 23
    IDENTIFICADOR  shift, and go to state 24
    LLAVIZQ        shift, and go to state 3

    $default  reduce using rule 28 (Sentencias)

    bloque                go to state 25
    Inicio_de_bloque      go to state 5
    Sentencias            go to state 64
    Sentencia             go to state 29
    llamada_proced        go to state 30
    sentencia_asignacion  go to state 31
    sentencia_if          go to state 32
    sentencia_while       go to state 33
    sentencia_for         go to state 34
    sentencia_entrada     go to state 35
    sentencia_salida      go to state 36


state 30

   36 Sentencia: llamada_proced .

    $default  reduce using rule 36 (Sentencia)


state 31

   30 Sentencia: sentencia_asignacion .

    $default  reduce using rule 30 (Sentencia)


state 32

   31 Sentencia: sentencia_if .

    $default  reduce using rule 31 (Sentencia)


state 33

   32 Sentencia: sentencia_while .

    $default  reduce using rule 32 (Sentencia)


state 34

   33 Sentencia: sentencia_for .

    $default  reduce using rule 33 (Sentencia)


state 35

   34 Sentencia: sentencia_entrada .

    $default  reduce using rule 34 (Sentencia)


state 36

   35 Sentencia: sentencia_salida .

    $default  reduce using rule 35 (Sentencia)


state 37

   26 tipo: TIPO_LISTA TIPO_PRIM .

    $default  reduce using rule 26 (tipo)


state 38

   18 lista_identificadores: lista_identificadores IDENTIFICADOR . error

    error  shift, and go to state 65


state 39

   16 lista_identificadores: lista_identificadores COMA . IDENTIFICADOR

    IDENTIFICADOR  shift, and go to state 66


state 40

   23 Cuerpo_declar_variables: lista_identificadores PYC . error

    error  shift, and go to state 67


state 41

   16 lista_identificadores: lista_identificadores . COMA IDENTIFICADOR
   18                      | lista_identificadores . IDENTIFICADOR error
   22 Cuerpo_declar_variables: tipo lista_identificadores . PYC
   24                        | tipo lista_identificadores . error

    error          shift, and go to state 68
    IDENTIFICADOR  shift, and go to state 38
    COMA           shift, and go to state 39
    PYC            shift, and go to state 69


state 42

    8 Cabecera_subprograma: SUBPROG_CLAVE IDENTIFICADOR . PARIZQ lista_argumentos PARDER

    PARIZQ  shift, and go to state 70


state 43

   40 sentencia_if: NOMB_IF PARIZQ . expresion PARDER NOMB_THEN
   41 Sentencia: NOMB_IF PARIZQ . expresion PARDER NOMB_THEN Sentencia NOMB_ELSE Sentencia

    error          shift, and go to state 47
    OP_UN_BIN      shift, and go to state 48
    OP_UNARIO      shift, and go to state 49
    IDENTIFICADOR  shift, and go to state 50
    CONSTANTE      shift, and go to state 52
    PARIZQ         shift, and go to state 53
    CORIZQ         shift, and go to state 54

    expresion        go to state 71
    constante_lista  go to state 57


state 44

   42 sentencia_while: NOMB_WHILE PARIZQ . expresion PARDER Sentencia

    error          shift, and go to state 47
    OP_UN_BIN      shift, and go to state 48
    OP_UNARIO      shift, and go to state 49
    IDENTIFICADOR  shift, and go to state 50
    CONSTANTE      shift, and go to state 52
    PARIZQ         shift, and go to state 53
    CORIZQ         shift, and go to state 54

    expresion        go to state 72
    constante_lista  go to state 57


state 45

   43 sentencia_for: NOMB_FOR PARIZQ . sentencia_asignacion expresion PYC Sentencia PARDER Sentencia

    IDENTIFICADOR  shift, and go to state 73

    sentencia_asignacion  go to state 74


state 46

   16 lista_identificadores: lista_identificadores . COMA IDENTIFICADOR
   18                      | lista_identificadores . IDENTIFICADOR error
   44 sentencia_entrada: NOMB_ENTRADA lista_identificadores . PYC

    IDENTIFICADOR  shift, and go to state 38
    COMA           shift, and go to state 39
    PYC            shift, and go to state 75


state 47

   60 expresion: error .

    $default  reduce using rule 60 (expresion)


state 48

   54 expresion: OP_UN_BIN . expresion

    error          shift, and go to state 47
    OP_UN_BIN      shift, and go to state 48
    OP_UNARIO      shift, and go to state 49
    IDENTIFICADOR  shift, and go to state 50
    CONSTANTE      shift, and go to state 52
    PARIZQ         shift, and go to state 53
    CORIZQ         shift, and go to state 54

    expresion        go to state 76
    constante_lista  go to state 57


state 49

   52 expresion: OP_UNARIO . expresion

    error          shift, and go to state 47
    OP_UN_BIN      shift, and go to state 48
    OP_UNARIO      shift, and go to state 49
    IDENTIFICADOR  shift, and go to state 50
    CONSTANTE      shift, and go to state 52
    PARIZQ         shift, and go to state 53
    CORIZQ         shift, and go to state 54

    expresion        go to state 77
    constante_lista  go to state 57


state 50

   57 expresion: IDENTIFICADOR .

    $default  reduce using rule 57 (expresion)


state 51

   47 lista_expresiones_o_cadena: CADENA . COMA lista_expresiones_o_cadena
   49                           | CADENA .

    COMA  shift, and go to state 78

    $default  reduce using rule 49 (lista_expresiones_o_cadena)


state 52

   58 expresion: CONSTANTE .

    $default  reduce using rule 58 (expresion)


state 53

   51 expresion: PARIZQ . expresion PARDER

    error          shift, and go to state 47
    OP_UN_BIN      shift, and go to state 48
    OP_UNARIO      shift, and go to state 49
    IDENTIFICADOR  shift, and go to state 50
    CONSTANTE      shift, and go to state 52
    PARIZQ         shift, and go to state 53
    CORIZQ         shift, and go to state 54

    expresion        go to state 79
    constante_lista  go to state 57


state 54

   61 constante_lista: CORIZQ . lista_expresiones CORDER

    error          shift, and go to state 47
    OP_UN_BIN      shift, and go to state 48
    OP_UNARIO      shift, and go to state 49
    IDENTIFICADOR  shift, and go to state 50
    CONSTANTE      shift, and go to state 52
    PARIZQ         shift, and go to state 53
    CORIZQ         shift, and go to state 54

    CORDER  reduce using rule 21 (lista_expresiones)
    COMA    reduce using rule 21 (lista_expresiones)

    lista_expresiones  go to state 80
    expresion          go to state 81
    constante_lista    go to state 57


state 55

   45 sentencia_salida: NOMB_SALIDA lista_expresiones_o_cadena . PYC

    PYC  shift, and go to state 82


state 56

   46 lista_expresiones_o_cadena: expresion . COMA lista_expresiones_o_cadena
   48                           | expresion .
   53 expresion: expresion . OP_BINARIO expresion
   55          | expresion . OP_UN_BIN expresion
   56          | expresion . OP_TERN_PRIM_UN expresion OP_TERN_SEG expresion

    OP_TERN_PRIM_UN  shift, and go to state 83
    OP_UN_BIN        shift, and go to state 84
    OP_BINARIO       shift, and go to state 85
    COMA             shift, and go to state 86

    $default  reduce using rule 48 (lista_expresiones_o_cadena)


state 57

   59 expresion: constante_lista .

    $default  reduce using rule 59 (expresion)


state 58

   37 Sentencia: IDENTIFICADOR LISTA_SENT .

    $default  reduce using rule 37 (Sentencia)


state 59

   38 llamada_proced: IDENTIFICADOR PARIZQ . lista_expresiones PARDER PYC

    error          shift, and go to state 47
    OP_UN_BIN      shift, and go to state 48
    OP_UNARIO      shift, and go to state 49
    IDENTIFICADOR  shift, and go to state 50
    CONSTANTE      shift, and go to state 52
    PARIZQ         shift, and go to state 53
    CORIZQ         shift, and go to state 54

    PARDER  reduce using rule 21 (lista_expresiones)
    COMA    reduce using rule 21 (lista_expresiones)

    lista_expresiones  go to state 87
    expresion          go to state 81
    constante_lista    go to state 57


state 60

   39 sentencia_asignacion: IDENTIFICADOR ASIGN . expresion PYC

    error          shift, and go to state 47
    OP_UN_BIN      shift, and go to state 48
    OP_UNARIO      shift, and go to state 49
    IDENTIFICADOR  shift, and go to state 50
    CONSTANTE      shift, and go to state 52
    PARIZQ         shift, and go to state 53
    CORIZQ         shift, and go to state 54

    expresion        go to state 88
    constante_lista  go to state 57


state 61

    5 Declar_subprog: Cabecera_subprograma bloque .

    $default  reduce using rule 5 (Declar_subprog)


state 62

   10 Fin_de_bloque: LLAVDER .

    $default  reduce using rule 10 (Fin_de_bloque)


state 63

    2 bloque: Inicio_de_bloque Declar_de_variables_locales Declar_de_subprogs Sentencias Fin_de_bloque .

    $default  reduce using rule 2 (bloque)


state 64

   27 Sentencias: Sentencia Sentencias .

    $default  reduce using rule 27 (Sentencias)


state 65

   18 lista_identificadores: lista_identificadores IDENTIFICADOR error .

    $default  reduce using rule 18 (lista_identificadores)


state 66

   16 lista_identificadores: lista_identificadores COMA IDENTIFICADOR .

    $default  reduce using rule 16 (lista_identificadores)


state 67

   23 Cuerpo_declar_variables: lista_identificadores PYC error .

    $default  reduce using rule 23 (Cuerpo_declar_variables)


state 68

   24 Cuerpo_declar_variables: tipo lista_identificadores error .

    $default  reduce using rule 24 (Cuerpo_declar_variables)


state 69

   22 Cuerpo_declar_variables: tipo lista_identificadores PYC .

    $default  reduce using rule 22 (Cuerpo_declar_variables)


state 70

    8 Cabecera_subprograma: SUBPROG_CLAVE IDENTIFICADOR PARIZQ . lista_argumentos PARDER

    TIPO_PRIM   shift, and go to state 11
    TIPO_LISTA  shift, and go to state 12

    $default  reduce using rule 15 (lista_argumentos)

    lista_argumentos  go to state 89
    tipo              go to state 90


state 71

   40 sentencia_if: NOMB_IF PARIZQ expresion . PARDER NOMB_THEN
   41 Sentencia: NOMB_IF PARIZQ expresion . PARDER NOMB_THEN Sentencia NOMB_ELSE Sentencia
   53 expresion: expresion . OP_BINARIO expresion
   55          | expresion . OP_UN_BIN expresion
   56          | expresion . OP_TERN_PRIM_UN expresion OP_TERN_SEG expresion

    OP_TERN_PRIM_UN  shift, and go to state 83
    OP_UN_BIN        shift, and go to state 84
    OP_BINARIO       shift, and go to state 85
    PARDER           shift, and go to state 91


state 72

   42 sentencia_while: NOMB_WHILE PARIZQ expresion . PARDER Sentencia
   53 expresion: expresion . OP_BINARIO expresion
   55          | expresion . OP_UN_BIN expresion
   56          | expresion . OP_TERN_PRIM_UN expresion OP_TERN_SEG expresion

    OP_TERN_PRIM_UN  shift, and go to state 83
    OP_UN_BIN        shift, and go to state 84
    OP_BINARIO       shift, and go to state 85
    PARDER           shift, and go to state 92


state 73

   39 sentencia_asignacion: IDENTIFICADOR . ASIGN expresion PYC

    ASIGN  shift, and go to state 60


state 74

   43 sentencia_for: NOMB_FOR PARIZQ sentencia_asignacion . expresion PYC Sentencia PARDER Sentencia

    error          shift, and go to state 47
    OP_UN_BIN      shift, and go to state 48
    OP_UNARIO      shift, and go to state 49
    IDENTIFICADOR  shift, and go to state 50
    CONSTANTE      shift, and go to state 52
    PARIZQ         shift, and go to state 53
    CORIZQ         shift, and go to state 54

    expresion        go to state 93
    constante_lista  go to state 57


state 75

   44 sentencia_entrada: NOMB_ENTRADA lista_identificadores PYC .

    $default  reduce using rule 44 (sentencia_entrada)


state 76

   53 expresion: expresion . OP_BINARIO expresion
   54          | OP_UN_BIN expresion .
   55          | expresion . OP_UN_BIN expresion
   56          | expresion . OP_TERN_PRIM_UN expresion OP_TERN_SEG expresion

    OP_TERN_PRIM_UN  shift, and go to state 83
    OP_UN_BIN        shift, and go to state 84

    $default  reduce using rule 54 (expresion)


state 77

   52 expresion: OP_UNARIO expresion .
   53          | expresion . OP_BINARIO expresion
   55          | expresion . OP_UN_BIN expresion
   56          | expresion . OP_TERN_PRIM_UN expresion OP_TERN_SEG expresion

    OP_TERN_PRIM_UN  shift, and go to state 83
    OP_UN_BIN        shift, and go to state 84
    OP_BINARIO       shift, and go to state 85

    $default  reduce using rule 52 (expresion)


state 78

   47 lista_expresiones_o_cadena: CADENA COMA . lista_expresiones_o_cadena

    error          shift, and go to state 47
    OP_UN_BIN      shift, and go to state 48
    OP_UNARIO      shift, and go to state 49
    IDENTIFICADOR  shift, and go to state 50
    CADENA         shift, and go to state 51
    CONSTANTE      shift, and go to state 52
    PARIZQ         shift, and go to state 53
    CORIZQ         shift, and go to state 54

    PYC  reduce using rule 50 (lista_expresiones_o_cadena)

    lista_expresiones_o_cadena  go to state 94
    expresion                   go to state 56
    constante_lista             go to state 57


state 79

   51 expresion: PARIZQ expresion . PARDER
   53          | expresion . OP_BINARIO expresion
   55          | expresion . OP_UN_BIN expresion
   56          | expresion . OP_TERN_PRIM_UN expresion OP_TERN_SEG expresion

    OP_TERN_PRIM_UN  shift, and go to state 83
    OP_UN_BIN        shift, and go to state 84
    OP_BINARIO       shift, and go to state 85
    PARDER           shift, and go to state 95


state 80

   19 lista_expresiones: lista_expresiones . COMA expresion
   61 constante_lista: CORIZQ lista_expresiones . CORDER

    CORDER  shift, and go to state 96
    COMA    shift, and go to state 97


state 81

   20 lista_expresiones: expresion .
   53 expresion: expresion . OP_BINARIO expresion
   55          | expresion . OP_UN_BIN expresion
   56          | expresion . OP_TERN_PRIM_UN expresion OP_TERN_SEG expresion

    OP_TERN_PRIM_UN  shift, and go to state 83
    OP_UN_BIN        shift, and go to state 84
    OP_BINARIO       shift, and go to state 85

    $default  reduce using rule 20 (lista_expresiones)


state 82

   45 sentencia_salida: NOMB_SALIDA lista_expresiones_o_cadena PYC .

    $default  reduce using rule 45 (sentencia_salida)


state 83

   56 expresion: expresion OP_TERN_PRIM_UN . expresion OP_TERN_SEG expresion

    error          shift, and go to state 47
    OP_UN_BIN      shift, and go to state 48
    OP_UNARIO      shift, and go to state 49
    IDENTIFICADOR  shift, and go to state 50
    CONSTANTE      shift, and go to state 52
    PARIZQ         shift, and go to state 53
    CORIZQ         shift, and go to state 54

    expresion        go to state 98
    constante_lista  go to state 57


state 84

   55 expresion: expresion OP_UN_BIN . expresion

    error          shift, and go to state 47
    OP_UN_BIN      shift, and go to state 48
    OP_UNARIO      shift, and go to state 49
    IDENTIFICADOR  shift, and go to state 50
    CONSTANTE      shift, and go to state 52
    PARIZQ         shift, and go to state 53
    CORIZQ         shift, and go to state 54

    expresion        go to state 99
    constante_lista  go to state 57


state 85

   53 expresion: expresion OP_BINARIO . expresion

    error          shift, and go to state 47
    OP_UN_BIN      shift, and go to state 48
    OP_UNARIO      shift, and go to state 49
    IDENTIFICADOR  shift, and go to state 50
    CONSTANTE      shift, and go to state 52
    PARIZQ         shift, and go to state 53
    CORIZQ         shift, and go to state 54

    expresion        go to state 100
    constante_lista  go to state 57


state 86

   46 lista_expresiones_o_cadena: expresion COMA . lista_expresiones_o_cadena
